Version 0.8.4   unreleased

   * Add GWT constants parser in CedarProperties
   * Add a copyJavadocToMercurial() method 

Version 0.8.3   13 Sep 2013

   * Add Javadoc functionality

Version 0.8.2   13 Sep 2013

    * Initial public release
