@@ -3,3 +3,4 @@ syntax: glob
 build/*
 .*.swp
 local.properties
+.*.swo
