@@ -2,6 +2,7 @@ Version 0.8.4   unreleased
 
    * Add GWT constants parser in CedarProperties
    * Add a copyJavadocToMercurial() method 
+   * Add a cedarTestSuite plugin for unittest and clienttest tasks
 
 Version 0.8.3   13 Sep 2013
 
